Add all issue selector and auction_key persistence
